--- a/package.json
+++ b/package.json
@@ -1,25 +1,44 @@
 {
-  "name": "kp",
+  "name": "gentlecorp-ecosystem",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack -p 4000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --cache --write \"src/**/*.ts\" \"src/**/*.tsx\"",
+    "depcheck": "depcheck",
+    "typedoc": "typedoc"
   },
   "dependencies": {
+    "@apollo/client": "^3.12.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.2.0",
+    "@mui/material": "^6.4.0",
+    "@mui/x-tree-view": "^7.23.2",
+    "next-auth": "^4.24.11",
+    "pino": "^9.5.0",
+    "fs-extra": "^11.2.0",
+    "pino-pretty": "^13.0.0",
     "next": "15.1.6"
   },
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
+    "@types/fs-extra": "^11.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "depcheck": "1.4.7",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.0",
+    "prettier-plugin-organize-imports": "4.1.0",
     "@eslint/eslintrc": "^3"
   }
 }
