--- a/package.json
+++ b/package.json
@@ -13,23 +13,26 @@
   },
   "dependencies": {
     "@apollo/client": "^3.12.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.2.0",
-    "@mui/material": "^6.4.0",
+    "@mui/material": "^6.4.5",
+    "@mui/x-data-grid": "^7.27.0",
     "@mui/x-tree-view": "^7.23.2",
+    "@types/antd": "^0.12.32",
+    "antd": "^5.24.1",
+    "fs-extra": "^11.2.0",
+    "next": "15.1.6",
     "next-auth": "^4.24.11",
     "pino": "^9.5.0",
-    "fs-extra": "^11.2.0",
     "pino-pretty": "^13.0.0",
-    "next": "15.1.6"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@eslint/eslintrc": "^3",
     "@types/fs-extra": "^11.0.4",
+    "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "depcheck": "1.4.7",
@@ -39,6 +42,6 @@
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.0",
     "prettier-plugin-organize-imports": "4.1.0",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
