--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^6.4.5",
     "@mui/x-data-grid": "^7.27.0",
     "@mui/x-tree-view": "^7.23.2",
+    "@toolpad/core": "^0.12.0",
     "@types/antd": "^0.12.32",
     "antd": "^5.24.1",
     "fs-extra": "^11.2.0",
